--- a/webrtc.gni
+++ b/webrtc.gni
@@ -149,8 +149,8 @@ declare_args() {
   #
   # Enabling H264 when building with MSVC is currently not supported, see
   # bugs.webrtc.org/9213#c13 for more info.
-  rtc_use_h264 =
-      proprietary_codecs && !is_android && !is_ios && !(is_win && !is_clang)
+  rtc_use_h264 = true
+  #    proprietary_codecs && !is_android && !is_ios && !(is_win && !is_clang)
 
   # By default, use normal platform audio support or dummy audio, but don't
   # use file-based audio playout and record.
